changes in final

--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -3,8 +3,8 @@
 }
 
 .team_Section .bg-heading-imag {
-  background-image: url("../../assets/2941300.jpg");
-  background-position: 0px 33%;
+  background-image: url("../../assets/team-banner.jpg");
+  background-position: 0px 40%;
   background-repeat: no-repeat;
   background-size: cover;
 }
